Move SASS Files Into assets/css

--- a/assets/css/elements/_links.sass
+++ b/assets/css/elements/_links.sass
@@ -1,7 +1,7 @@
 a 
     text-decoration: none
-    color: $color-link
+    color: $accent-color
 
     &:hover,
     &:focus 
-        color: $color-link-hover
+        color: $accent-color
