--- a/assets/css/docyll.scss
+++ b/assets/css/docyll.scss
@@ -4,6 +4,8 @@
 @import "settings/global";
 @import "settings/colors";
 
+@import "theme";
+
 @import "tools/mixins";
 
 @import "generic/box-sizing";
