--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>{% if page.title %}{{ page.title }} &#8211; {% endif %}{{ site.title }}</title>
+        <link rel="stylesheet" href="{{site.baseurl}}assets/css/theme.css">
         <link rel="stylesheet" href="{{site.baseurl}}assets/css/docyll.css">
     </head>
     <body>
