--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>{% if page.title %}{{ page.title }} &#8211; {% endif %}{{ site.title }}</title>
-        <link rel="stylesheet" href="assets/css/theme.css">
-        <link rel="stylesheet" href="assets/css/docyll.css">
+        <link rel="stylesheet" href="{{ '/assets/css/theme.css' | relative_url }}">
+        <link rel="stylesheet" href="{{ '/assets/css/docyll.css' | relative_url }}">
     </head>
     <body>
         <!-- Header -->
