--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="main-header">
     
-    <a href="{{ site.url }}" class="logo">
+    <a href="{{ site.baseUrl }}" class="logo">
         <img src="{{site.baseurl}}assets/logo.svg" width="30" height="30" alt="{{site.title}} logo">
         <h1>{{ site.title }}</h1>
     </a>
@@ -8,31 +8,25 @@
     <button class="nav-button"><i class="fa fa-bars"></i> Menu</button>
     
     <nav class="main-nav">
-    
+
+        <!-- Pages Navigation Links -->
         <ul class="main-nav__site-nav">
-        
-            <li class="main-nav__site-nav__item">
-                <a class="main-nav__site-nav__item__link {% if page.url == '/'  %} current {% endif %}" href="{{ sites.baseurl}}/">Home</a>
-            </li>
             
-            <li class="main-nav__site-nav__item">
-                <a class="main-nav__site-nav__item__link {% if page.url == '/docs.html' %} current {% endif %}" href="{{ sites.baseurl}}/docs.html">Documentation</a>
-            </li>
+            {% assign sorted_pages = site.html_pages | sort: "order" %}
+            {% for node in sorted_pages %}
+            {%- if node.url != "/" -%}
+                <li class="main-nav__site-nav__item">
+                    <a class="main-nav__site-nav__item__link {% if page.url == node.url %} current {% endif %}" href="{{ node.url }}">
+                        {{node.title}}
+                    </a>
+                </li>
+            {%- endif -%}
+            {% endfor %}
             
-            <li class="main-nav__site-nav__item">
-                <a class="main-nav__site-nav__item__link {% if page.url == '/examples.html' %} current {% endif %}" href="{{ sites.baseurl}}/examples.html">Examples</a>
-            </li>
-            
-            <li class="main-nav__site-nav__item">
-                <a class="main-nav__site-nav__item__link {% if page.url == '/blog.html' %} current {% endif %}" href="{{ sites.baseurl}}/blog.html">Blog</a>
-            </li>
-            
-            <li class="main-nav__site-nav__item">
-                <a class="main-nav__site-nav__item__link {% if page.url == '/about.html' %} current {% endif %}" href="{{ sites.baseurl}}/about.html">About</a>
-            </li>
-
         </ul>
+        <!-- End of Pages Navigation Links -->
 
+        <!-- Social Media Icons -->
         {% if site.socialProfiles %}
         <ul class="main-nav__social-links">
             {% for profile in site.socialProfiles %}
@@ -44,6 +38,7 @@
             {% endfor %}
         </ul>
         {% endif %}
-        
+        <!-- End of Social Media Icons -->
+
     </nav>
 </header>
