--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,8 +1,13 @@
 ---
-layout: default
+layout: page
 ---
 
-{{ content }}
+<div class="container">
+    
+    <article class="">
+        {{ content }}
+    </article>
+</div>
 
 
 {% if site.disqus.shortname %}
