--- a/assets/css/objects/_post-modal.sass
+++ b/assets/css/objects/_post-modal.sass
@@ -1,6 +1,10 @@
 .post-modal
+
+    // for styling
+    background-color: gray
+
     padding: 15px
-    margin: 100px 0
+    margin: 15px 0
     border-bottom: 1px solid black
     &__heading
         margin: 0
