--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="main-header">
     
     <a href="{{ site.baseUrl }}" class="logo">
-        <img src="{{site.baseurl}}assets/logo.svg" width="30" height="30" alt="{{site.title}} logo">
+        <img src="{{ '/assets/logo.svg' | absolute_url }}" width="30" height="30" alt="{{site.title}} logo">
         <h1>{{ site.title }}</h1>
     </a>
 
